# ChaoGateNN

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
nbs/: Diff_chao_config.ipynb  Diff_chaogate_3input.ipynb  Diff_new_chao_config.ipynb  NN_one_bit_chaogate.ipynb  chao_XNOR.ipynb  chao_half_adder.ipynb  chaogates.ipynb  duffing_plotter.ipynb  duffing_sweep.ipynb  flexible_full_adder.ipynb  henon_plotter.ipynb  logistic_gate_analysis.ipynb  logistic_map_constrained_optimization.ipynb  logistic_plotter.ipynb  logistic_sweep.ipynb  lorenz_plotter.ipynb  prototyping.ipynb  rossler_hc_plotter.ipynb  sweep_plotter.ipynb
output/logistic_sweep/: AND_results.csv  NAND_results.csv  NOR_results.csv  OR_results.csv  XNOR_results.csv  XOR_results.csv
scripts/: duffing_chaogate.py  duffing_new_chao_sweep.sh  duffing_newchaogate.py  duffing_sweep.py  duffing_sweep.sh  henon_chaogate.py  henon_sweep.sh  logistic_chaogate.py  logistic_new_chao_sweep.sh  logistic_newchaogate.py  logistic_sweep.py  logistic_sweep.sh  lorenz_chaogate.py  lorenz_new_chao_sweep.sh  lorenz_newchaogate.py  lorenz_sweep.sh  parallel_lsweep.py  rossler_hc_chaogate.py  rossler_hc_sweep.sh
src/chaogatenn/: __init__.py  chaogate.py  maps.py  utils.py
