[project]
name = "chaogatenn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.31",
    "equinox>=0.11.5",
    "matplotlib>=3.9.2",
    "ipython>=8.26.0",
    "jupyter>=1.1.0",
    "jupyterlab>=4.2.5",
    "ruff>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
