[project]
name = "chaogatenn"
version = "0.1.0"
description = "Code for gradient based optimization of chaogates paper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]>=0.4.31",
    "equinox>=0.11.5",
    "matplotlib>=3.9.2",
    "ipython>=8.26.0",
    "jupyter>=1.1.0",
    "jupyterlab>=4.2.5",
    "ruff>=0.6.3",
    "tqdm>=4.66.5",
    "optax>=0.2.3",
    "beartype>=0.18.5",
    "diffrax>=0.6.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# syntax error in forward annotation broken by jaxtyping
ignore = ["F722", "F821"]

[tool.pyright]
python.venvPath = ".venv"
reportMissingImports = "warning"


